--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  I think this website will be updated soon. Emphasis on I think.
 </p>
 <p>
-  Sean made a change
 </p>
 
 </body>
