--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   I think this website will be updated soon. Emphasis on I think.
 </p>
 <p>
+  Thank you for visiting. I can atleast test my site tracker well now because of you :p
 </p>
 
 </body>
