--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Basic HTML CSS Website</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
-<img src="forkit.gif" id="octocat" alt="" />
-
-<!-- Feel free to change this text here -->
-<p>
-  I think this website will be updated soon. Emphasis on I think.
-</p>
-
+  <header>
+    <h1>Welcome to My Website</h1>
+  </header>
+  <main>
+    <section>
+      <h2>About Me</h2>
+      <p>Hello! I'm an example website created with HTML and CSS.</p>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2023 YourName. All rights reserved.</p>
+  </footer>
 </body>
 </html>
