Added about and news sections

--- a/index.html
+++ b/index.html
@@ -8,22 +8,33 @@
 </head>
 <body>
   <div class="container">
+    <header style="background-color: #0a253d; color: #fff; text-align: center; padding: 1rem;">
+      <h1>Suchetan Saravanan</h1>
+      <img src="your-picture.jpg" alt="Your Picture" style="max-width: 150px; border-radius: 50%;">
+    </header>
+
     <section class="left-section">
       <!-- Add content for the left section here -->
-      <p>Left Section</p>
+      <!-- <p>Left Section</p> -->
     </section>
 
     <section class="center-section">
-      <header style="background-color: #0a253d; color: #fff; text-align: center; padding: 1rem;">
-        <img src="your-picture.jpg" alt="Your Picture" style="max-width: 150px; border-radius: 50%;">
-        <h1>Suchetan Saravanan</h1>
-      </header>
 
       <main style="padding: 2rem;">
         <section id="about">
           <h2>About Me</h2>
           <p>
-            Random bs go
+            I am a final year undergraduate at the Electrical and Electronics Department at BITS Pilani, Goa Campus majoring in Electrical and Electronics. I am a huge fan of building autonomous robots.
+          </p>
+          <p>
+            I am currently pursuing my Bachelor's thesis as a research fellow in the NAVIR²eS research group at ISAE-SUPAERO, France under Dr. Damien Vivet. The work I am doing here mainly focusses on building an Active SLAM system with multiple co-ordinating ground robots to explore a 3D terrain.
+          </p>
+          <p>
+            I served as the lead for the Robotic Arm subsystem of Project Kratos which is a prototype Mars rover built from ground up by our team for participating in the University Rover Challenge and the International Rover Challenge. Apart from this, I have been actively involved in various technical robotics projects in BITS Goa.
+          </p>
+          <p>
+            Programming has been something that I have loved to do for a very long time now. I am thankful to have found interest in building autonomous robots where I get to put my skills to use. Apart from this, I play chess and love running.
+            If you wish to collaborate on a resaerch project involving SLAM, please feel free to contact me. I will be very happy to collaborate! :)
           </p>
           <ul class="links">
             <li><a href="resume.pdf" target="_blank">Resume</a></li>
@@ -35,10 +46,17 @@
 
         <section id="news">
           <h2>News</h2>
-          <!-- Placeholder content for news items -->
-          <p>August 2023 - Created my personal website.</p>
-          <p>July 2023 - Started working on an exciting new project.</p>
-        </section>
+          <div class="news-container">
+            <div class="column1_news">
+              <p><strong>August 2023</strong></p>
+              <p><strong>July 2023</strong></p>
+            </div>
+            <div class="column2_news">
+              <p>Created my personal website.</p>
+              <p>Started working on an exciting new project.</p>
+            </div>
+          </div>
+        </section>        
 
         <section id="experience">
           <h2>Experience</h2>
@@ -78,16 +96,17 @@
           </div>
         </section>
       </main>
-
-      <footer style="background-color: #0a253d; color: #fff; text-align: center; padding: 1rem;">
-        <p>&copy; 2023 Suchetan Saravanan. All rights reserved.</p>
-      </footer>
     </section>
 
-    <section class="right-section">
-      <!-- Add content for the right section here -->
-      <p>Right Section</p>
-    </section>
+    <div class="right-section">
+      <!-- Right section content here -->
+      <!-- <p>Right Section</p> -->
+    </div>
+  </div>
+
+  <footer style="background-color: #0a253d; color: #fff; text-align: center; padding: 1rem; bottom: 0; width: 100%;">
+    <p>&copy; 2023 Suchetan Saravanan. All rights reserved.</p>
+  </footer>
   </div>
 </body>
 </html>
