--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <div class="container">
     <header style="background-color: #0a253d; color: #fff; text-align: center; padding: 1rem;">
       <h1>Suchetan Saravanan</h1>
-      <img src="./images/your-picture.jpg" alt="Your Picture" style="max-width: 150px; border-radius: 50%;">
-    </header>
+      <img src="./images/your-picture.jpg" alt="Your Picture" style="max-width: 270px; border-radius: 3%;">
+    </header>    
 
     <section class="left-section">
       <!-- Add content for the left section here -->
@@ -61,7 +61,7 @@
         <section id="experience">
           <h2>Experience</h2>
           <!-- Placeholder content for experience entries using a table -->
-          <table class="experience-table">
+          <table class="experience-table"><tbody>
             <tr>
               <td class="column1_experience">
                 <img src="./images/isae.png" alt="isae" style="max-width: 150px;">
@@ -89,7 +89,7 @@
                 <p>Internship description goes here.</p>
               </td>
             </tr>
-          </table>
+          </tbody></table>
         </section>        
 
         <section id="projects">
