Fixed spelling error

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </p>
           <p>
             Programming has been something that I have loved to do for a very long time now. I am thankful to have found interest in building autonomous robots where I get to put my skills to use. Apart from this, I play chess and love running.
-            If you wish to collaborate on a resaerch project involving SLAM, please feel free to contact me. I will be very happy to collaborate! :)
+            If you wish to collaborate on a research project involving SLAM, please feel free to contact me. I will be very happy to collaborate! :)
           </p>
           <ul class="links">
             <li><a href="resume.pdf" target="_blank">Resume</a></li>
