--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li style="margin-right: 1rem;"><a href="#experience" style="color: #fff; text-decoration: none;">Experience</a></li>
           <li style="margin-right: 1rem;"><a href="#projects" style="color: #fff; text-decoration: none;">Projects</a></li>
           <li><a href="#projects" style="color: #fff; text-decoration: none;">Contributions</a></li>
+          <li><a href="suchetanrs_resume.pdf">Download Resume</a></li>
         </ul>
       </nav>
     </header>    
