--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             If you wish to collaborate on a research project involving SLAM, please feel free to contact me. I will be very happy to collaborate! :)
           </p>
           <ul class="links">
-            <li><a href="resume.pdf" target="_blank">Resume</a></li>
+            <li><a href="suchetanrs_resume.pdf" target="_blank">Resume</a></li>
             <li><a href="https://www.linkedin.com/in/suchetansaravanan/" target="_blank">LinkedIn</a></li>
             <li><a href="https://github.com/suchetansaravanan" target="_blank">GitHub</a></li>
             <li><a href="mailto:your-email@example.com">Email</a></li>
