--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a aria-label="My Github Profile" target="_blank" href="https://github.com/suchetanrs">
             <i class="icon fa fa-github-alt" aria-hidden="true"></i>
           </a>
-          <a aria-label="My Résumé" target="_blank" href="https://suchetanrs.github.io/suchetanrs_resume.pdf">
+          <a aria-label="My Résumé" target="_blank" href="https://suchetanrs.github.io/suchetanrs_cv.pdf">
             <i class="icon fa fa fa-file-pdf-o" aria-hidden="true"></i>
           </a>
           <a aria-label="Send Email" href="mailto:rssuchetan@gmail.com" target="_blank"
