--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 
     <title>Suchetan Saravanan</title>
     
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q71FTBHFGY"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-Q71FTBHFGY');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Q71FTBHFGY');
     </script>
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
