--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                                 <a href="https://suchetanrs.github.io" target="_blank">Homepage</a>
                                 &nbsp~&nbsp
                             </p>
+                            <p style="text-align:center; margin-top:10px;">
+                                <a class="btn btn-primary" style="font-size:14px;" href="game.html" target="_blank" rel="noopener">
+                                    Launch Pixel Robot Explorer
+                                </a>
+                            </p>
                             <br>
                             <p>
                                 I completed my <b>B.E. in Electrical and Electronics Engineering</b> at <b>BITS Pilani</b>, where my thesis introduced
