--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             </p>
                             <p style="text-align:center; margin-top:10px;">
                                 <a class="btn btn-primary" style="font-size:14px;" href="game.html" target="_blank" rel="noopener">
-                                    Launch Pixel Robot Explorer
+                                    Launch Pixel Robot Navigator
                                 </a>
                             </p>
                             <br>
