--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 &nbsp~&nbsp
                             </p>
                             <p style="text-align:center; margin-top:10px;">
-                                <a class="btn btn-primary" style="font-size:14px;" href="game.html" target="_blank" rel="noopener">
+                                <a class="btn btn-primary" style="font-size:14px;" href="pixel_robot_navigator.html" target="_blank" rel="noopener">
                                     Launch Pixel Robot Navigator
                                 </a>
                             </p>
