--- a/pixel_robot_navigator.html
+++ b/pixel_robot_navigator.html
@@ -253,7 +253,7 @@
 <body>
     <div id="startOverlay">
         <div style="max-width:480px;">
-            <h1 style="margin:0 0 10px 0; color:#66fcf1; font-size:18px;">Pixel Robot Explorer</h1>
+            <h1 style="margin:0 0 10px 0; color:#66fcf1; font-size:18px;">Pixel Robot Navigator</h1>
             <p style="margin:0;">Pilot your robot, uncover the map, and collect fresh produce.<br><br>Find the gold coin for a massive bounty.</p>
         </div>
         <div style="display:flex; flex-direction:column; gap:10px; align-items:center; color:#fff; font-size:12px;">
