--- a/pixel_robot_navigator.html
+++ b/pixel_robot_navigator.html
@@ -305,8 +305,7 @@
     </div>
     <div id="scorePopup"></div>
     <audio id="bgm" preload="auto" loop aria-hidden="true" style="display:none;">
-        <source src="https://a.slack-edge.com/production-standard-llvm/sounds/smooth_jazz.ogg" type="audio/ogg">
-        <source src="https://a.slack-edge.com/production-standard-llvm/sounds/smooth_jazz.mp3" type="audio/mpeg">
+        <source src="files/pixel_navigator_jazz.mp3" type="audio/mpeg">
     </audio>
     <div id="mobileControls">
         <button id="togglePanelsBtn" aria-pressed="false">Hide Panels</button>
